# KeyClockSampleCode

./: AuthFlow.md  Notes.md  Test.md
AngularFrontEnd/: README.md  angular.json  package-lock.json  package.json
AngularFrontEnd/src/app/: app.config.ts  app.routes.ts  app.ts
AngularFrontEnd/src/app/auth/: auth.config.ts  auth.interceptor.ts  auth.models.ts  auth.provider.ts  auth.service.ts  index.ts  keycloak-init.factory.ts  role.guard.ts
AngularFrontEnd/src/app/core/interceptors/: error.interceptor.ts
AngularFrontEnd/src/app/core/services/: api.service.ts
AngularFrontEnd/src/app/layout/: layout.component.ts  navbar.component.ts
AngularFrontEnd/src/app/pages/admin/: admin.component.ts
AngularFrontEnd/src/app/pages/landing/: landing.component.ts
AngularFrontEnd/src/app/pages/profile/: profile.component.ts
AngularFrontEnd/src/environments/: environment.prod.ts  environment.ts
PythonBackned/: .env.example  .gitignore  CLAUDE.md  PythonReadme.md  config.yaml  pyproject.toml
PythonBackned/src/app/: main.py
PythonBackned/src/app/routes/: protected.py
PythonBackned/src/keycloak_auth/: __init__.py  authenticator.py  config.py  exceptions.py  jwks.py  models.py  validators.py
PythonBackned/src/keycloak_auth/fastapi/: __init__.py  dependencies.py  middleware.py
PythonBackned/tests/: conftest.py  test_authenticator.py  test_config.py  test_dependencies.py  test_routes.py  test_validators.py
